tests/NormalTests/paczka1/fuzzy1/51582978.err
Error in line 14: 3uNoIen S812 194,4
Error in line 16: 3uNoIen S52 73,0
